--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "react-native": "0.52.2",
     "react-navigation": "^1.0.3"
   },
+  "dependencies": {
+    "react-native-dimension": "^1.0.6",
+    "supercluster": "^3.0.2"
+  },
   "presets": [
     "react-native"
   ],
